src/test/deca/context/valid/fields/public_field_access_same_class.deca
// Description :
//    Accès à un champ public depuis la même classe.
//
// Resultats :
//    OK

class A {
    public int x;

    void set() {
        x = 1;
    }

    int get() {
        return x;
    }
}

{
}

