src/test/deca/context/invalid/return/return_in_main_custom.deca
// Description :
// return dans la méthode main
//
// Resultats :
// Erreur contextuelle
// Ligne 5 : return illégal

class E {
    public static void main() {
        return 0; // invalide
    }
}
